fix user profile dropdown z-index

--- a/editor/src/app/components/layout/header/header.component.scss
+++ b/editor/src/app/components/layout/header/header.component.scss
@@ -28,7 +28,7 @@ a.nav-link.active {
   color: white;
 }
 
-.navbar-expand .navbar-nav .dropdown-menu {
+.navbar .dropdown-menu {
   z-index: 1030;
 }
 
